# intro_modern_rl

./: .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md
.media/: pyproject.toml
Assignment1-PPO-Dynamic/: .gitignore  README.md
Assignment2-HuggingFace-RLHF/: .gitignore  README.md  evaluation_results.txt  reward_model.py  run_rlhf_pipeline.py
Week11-InverseRL-LunarLander/: hyperparameter_tuner.py  main.py  pyproject.toml
Week11-InverseRL-LunarLander/outputs/: results.txt
Week2-QLearning-FrozenLake/: main.ipynb  pyproject.toml
Week3-DQN-CartPole/: dqn.yaml  infer.bash  main.ipynb  train.bash
Week4-PPO-minigrid/: README.md
Week9-DreamerV3-breakout/: .gitignore  INFERENCE_GUIDE.md  QUICKSTART.md  README.md  inference_video.py  train_breakout.sh
challenges/: challenge0.md  challenge1.md  challenge2.md  challenge3.md  challenge4.md
examples/.media/: video_stitching.py
examples/PPO-minigrid/: main.ipynb  main.py  pyproject.toml
examples/embodyRL-Mujoco/: main.py  pyproject.toml
examples/rlhf_huggingface/: evaluate_alignment.py  ppo_training.py  pyproject.toml
lab1/: README.md
lab10/: README.md
lab2/: README.md  lab2.ipynb
lab3/: README.md  scenarios.md
lab4/: README.md  lab4.ipynb
lab5/: README.md  main.py  requirements.txt
lab6/: README.md
lab7/: README.md  lab7.ipynb
lab8/: README.md  pyproject.toml  visualize_dream.py
lab9/: README.md  lab9.ipynb
