[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipi-531-rl"
version = "0.1.0"
description = "AIRL Training for LunarLander-v2"
authors = [{ name = "Duke TRUST Lab" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "gymnasium[box2d]>=0.29.1",
    "imageio[ffmpeg]>=2.37.0",
    "imitation>=1.0.1",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "plotly>=6.3.1",
    "stable-baselines3>=2.2.1",
]
