[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipi-531-rl"
version = "0.1.0"
description = "Code for AIPI 531 - Introduction to Modern Reinforcement Learning"
authors = [{ name = "Duke TRUST Lab" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "gymnasium[box2d]>=1.2.0,<2.0.0",
  "pygame>=2.6.1,<3.0.0",
  "tqdm>=4.67.1,<5.0.0",
  "imageio>=2.37.0,<3.0.0",
  "ale-py>=0.11.2,<0.12.0",
  "rl-zoo3>=2.7.0,<3.0.0",
  "opencv-python>=4.12.0.88,<5.0.0.0",
  "moviepy>=2.2.1,<3.0.0",
  "swig>=4.3.1.post0",
  "imageio-ffmpeg>=0.6.0",
  "tensorboard>=2.20.0",
  "trl>=0.23.0",
  "peft>=0.17.1",
  "math-verify>=0.8.0",
  "trackio>=0.4.1",
  "kernels>=0.10.2",
  "minigrid>=3.0.0",
]

[dependency-groups]
dev = ["notebook>=7.4.5"]
